# DevLogBus

./: .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  go.mod  go.sum
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: release.yml
cmd/devlogbus/: main.go
cmd/devlogbus-journal-bridge/: main.go
cmd/devlogbusd/: main.go
dev/: browser-tap-store-package.sh  ci-local.sh  homebrew-formula.sh  linux-package-repo.sh  linux-packages.sh  release-artifacts.sh  scoop-manifest.sh  windows-smoke.ps1  winget-manifests.sh
docs/: README.md  architecture.md  browser-tap-privacy.md  browser-tap-store.md  browser-tap.md  browser-ui.md  c-sdk.md  cli.md  compatibility.md  configuration.md  daemon.md  dotnet-sdk.md  examples.md  go-sdk.md  http-api.md  index.md  introducing-devlogbus.md  java-kotlin-sdk.md  journal-bridge.md  linux.md  node-typescript-sdk.md  package-managers.md  python-sdk.md  quickstart.md  rust-sdk.md  sdk-install.md  sdk-publishing.md  security-privacy.md  share-devlogbus.md  tui.md  why-devlogbus.md  windows.md
examples/browser-workflow/: index.html
examples/go-slog/: main.go
examples/node-typescript/: devlogbus.ts
examples/python/: devlogbus_example.py
extensions/chrome-devlogbus/: README.md  manifest.json  popup.css  popup.html  popup.js  service-worker.js
internal/buildinfo/: buildinfo.go
internal/completions/: completions.go
internal/configpath/: configpath.go  configpath_test.go
internal/devlogbus/app/: build_info.go  (+9 more)
internal/recordfmt/: format.go
internal/slogattrs/: attrs.go
pkg/client/: client.go  client_test.go  hooks.go  hooks_test.go
pkg/protocol/: protocol.go
pkg/runtime/: runtime.go  runtime_test.go
pkg/sloghandler/: handler.go  handler_test.go
sdk/c/: CMakeLists.txt  README.md
sdk/c/examples/: basic.c
sdk/c/include/: devlogbus.h
sdk/c/src/: devlogbus.c
sdk/c/tests/: test_devlogbus.c
sdk/dotnet/: README.md
sdk/jvm/: README.md  pom.xml
sdk/node/: README.md  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/devlogbus/: __init__.py  client.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: basic.rs
sdk/rust/src/: lib.rs
webapps/devlogbus-ui/: index.html  package-lock.json
(+57 files in other folders)
