[project]
name = "devlogbus"
version = "1.3.1"
description = "Python SDK for sending app records into the DevLogBus live development stream."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Dan Sherwin" }
]

[project.urls]
Homepage = "https://github.com/dan-sherwin/DevLogBus"
Repository = "https://github.com/dan-sherwin/DevLogBus"
Issues = "https://github.com/dan-sherwin/DevLogBus/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devlogbus*"]
namespaces = false
