[package]
name = "devlogbus"
version = "1.3.1"
edition = "2021"
description = "Rust SDK for publishing records to DevLogBus."
license = "MIT"
authors = ["Dan Sherwin"]
homepage = "https://github.com/dan-sherwin/DevLogBus"
repository = "https://github.com/dan-sherwin/DevLogBus"
readme = "README.md"
keywords = ["logging", "development", "devlogbus"]
categories = ["development-tools::debugging", "api-bindings"]

[lib]
name = "devlogbus"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
